<resources>
    <string name="app_name">ToDo Note - LittleApp</string>

    //Theme
    <string name="basic_theme">Basic Theme</string>
    <string name="sec_theme">Sec Theme</string>
    //Dialog
    <string name="dialog_delete_title">Confirm Deletion</string>
    <string name="dialog_delete_message_tasks">Are you sure you want to delete all completed tasks?</string>
    <string name="dialog_delete_message_notes">Are you sure you want to delete all notes?</string>
    <string name="dialog_btn_no">No</string>
    <string name="dialog_btn_yes">Yes</string>
    //Tasks
    <string name="msg_task_added">Task Added</string>
    <string name="msg_task_updated">Task updated</string>
    <string name="msg_all_completed_tasks_deleted">All completed tasks deleted.</string>
    <string name="msg_task_deleted">Task deleted</string>
    <string name="action_undo">UNDO</string>
    <string name="title_new_task">New Task</string>
    <string name="title_edit_task">Edit Task</string>
    //Notes
    <string name="msg_note_added">Note added.</string>
    <string name="msg_note_updated">Note updated.</string>
    <string name="msg_all_notes_deleted">All notes deleted.</string>
    <string name="created">Created:  %1$s</string>
    //Menu
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_name">Sort by name</string>
    <string name="menu_sort_by_date_created">Sort by date created</string>
    <string name="menu_more">More</string>
    <string name="menu_hide_completed">Hide completed</string>
    <string name="menu_delete_completed_tasks">Delete completed tasks</string>
    <string name="menu_delete_all_notes">Delete All Notes</string>
    //Hints and Labels
    <string name="hint_task">Task</string>
    <string name="label_important_task">Important Task</string>
    <string name="label_date_created">Date created: </string>
    <string name="hint_content">Content</string>
    <string name="hint_title">Title</string>
    <string name="menu_todo">TO-DO</string>
    <string name="menu_notes">Notes</string>
    <string name="todo">TODO</string>
    <string name="content_description_save">Save</string>
    <string name="content_description_priority">Priority</string>
    <string name="content_description_date">Date</string>
    <string name="content_description_delete">Delete</string>
</resources>