<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_notes"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="?colorError"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/menu_sort"
        app:iconTint="?colorError"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_by_name_notes"
                android:title="@string/menu_sort_by_name" />
            <item
                android:id="@+id/action_sort_by_date_created_notes"
                android:title="@string/menu_sort_by_date_created" />
        </menu>
    </item>

    <item
        android:id="@+id/action_more_options"
        android:icon="@drawable/ic_more"
        android:title="@string/menu_more"
        app:iconTint="?colorError"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_delete_all_notes"
                android:title="@string/menu_delete_all_notes" />
        </menu>
    </item>

</menu>