<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete_title"
        android:textColor="?colorOnBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Confirm Deletion" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_delete_message_tasks"
        android:textColor="?colorOnBackground"
        android:textSize="16sp"
        tools:text="Are you sure you want to delete all completed tasks?" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_no"
            android:textColor="?colorOnBackground"
            android:textSize="16sp"
            tools:text="No" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dialog_btn_yes"
            android:textColor="?colorOnBackground"
            android:textSize="16sp"
            tools:text="Yes" />

    </LinearLayout>

</LinearLayout>