<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnBackground">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/hint_content"
        android:textColor="?colorError"
        android:textColorHint="?colorError"
        app:boxStrokeColor="@color/input_border_color"
        app:boxStrokeWidth="2sp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="?colorError"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:suffixTextColor="?colorError"
        tools:layout_editor_absoluteX="9dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteContentEditText"
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:fontFamily="@font/asapcondensed"
            android:gravity="start"
            android:maxLines="15"
            android:textColor="?colorError"
            android:textColorHint="?colorError" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_title"
        android:textColor="?colorError"
        android:textColorHint="?colorError"
        app:boxStrokeColor="@color/input_border_color"
        app:boxStrokeWidth="2sp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="?colorError"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixTextColor="?colorError"
        tools:layout_editor_absoluteX="9dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asapcondensed"
            android:textColor="?colorError"
            android:textColorHint="?colorError" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/currentDateNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/asapcondensed"
        android:gravity="center_vertical"
        android:textColor="?colorError"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_date_range_24"
        app:drawableTint="?colorError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:text="Current Date" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/noteAddEditFloatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:backgroundTint="?colorOnBackground"
        android:contentDescription="@string/content_description_save"
        android:foreground="@drawable/check_float_bg"
        android:src="@drawable/ic_baseline_check_24"
        android:tint="@null"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>